// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SplitScreen should render 1`] = `
<div
  className="c-dashboard__column-holder"
>
  <div
    className="
        c-dashboard__column
        u-col-sm--4
        qa-dashboard__column--middle

      "
  >
    <p>
      Hello
    </p>
  </div>
  <div
    className="
        c-dashboard__column
        c-dashboard__content
        u-overflow--y-auto
        u-col-sm--8
        qa-dashboard__column--right
      "
  >
    <span>
      World
    </span>
    <div
      className="u-row"
    >
      <div
        className="u-col-sm--12"
      >
        <div
          className="u-margin__left--2 u-margin__bottom--2"
        >
          <Connect(ShareBar) />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SplitScreen should render in print mode 1`] = `
<div
  className="c-dashboard__column-holder"
>
  <div
    className="
        c-dashboard__column
        u-col-sm--12
        qa-dashboard__column--middle

      "
  >
    <p>
      Hello
    </p>
  </div>
  <div
    className="
        c-dashboard__column
        c-dashboard__content
        u-overflow--y-auto
        u-col-sm--12
        qa-dashboard__column--right
      "
  >
    <span>
      World
    </span>
  </div>
</div>
`;
